SET(T1HASRC     t1ha1.c
                t1ha2.c)

add_library(t1ha STATIC ${T1HASRC})
ADD_DEFINITIONS("-DT1HA_USE_FAST_ONESHOT_READ=0")

IF(ENABLE_FULL_DEBUG MATCHES "OFF")
    if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
        SET_TARGET_PROPERTIES(t1ha PROPERTIES COMPILE_FLAGS "-O3")
    endif ()
ENDIF()
